# render_jinja_with_bindings

./: .gitignore  Makefile  README.md  pyproject.toml
rendertempl/: bindings.py  main.py  render.py
tests/: conftest.py  test_bindings.py  test_main.py  test_render.py
tests/bindings/: single_file.yml
tests/bindings/complex_dir_one/: 01-cool.yml  02-cool.yml  03-cool.yml
tests/bindings/easy_dir_one/: 03-cool.yml
tests/jinja/: interactive.j2  trivial.yml.j2
tests/jinja/easy_dir_one/: 01-cool.yml.j2  02-cool.yml.j2
